layout issue

--- a/app/assets/stylesheets/church.sass
+++ b/app/assets/stylesheets/church.sass
@@ -4,10 +4,10 @@
 .church_info.churches
   min-height: 270px !important
   p.church_info_stats
-    width: 150px
+    text-align: left
     small
       font-size: 10px
-      width: 100px
+      width: 50%
       text-align: right
       display: inline-block
     span.church_size, span.members
